# Agentic-AI

./: .gitignore
1 Instant/: game.js  index.html  styles.css
3_kanban_copilot/frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
3_kanban_copilot/frontend/app/: globals.css  layout.tsx  page.tsx
3_kanban_copilot/frontend/components/: Board.test.tsx  Board.tsx  (+2 more)
4_kanban_codex/: .gitignore
4_kanban_codex/frontend/: README.md  package-lock.json  package.json  playwright.config.ts
7_FullStack/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile
7_FullStack/.claude/: settings.local.json
7_FullStack/backend/: ai.py  db.py  main.py  pyproject.toml  test_ai.py  test_main.py
7_FullStack/backend/data/: kanban.db
7_FullStack/docs/: DATABASE.md  PLAN.md  code_review.md
7_FullStack/frontend/: AGENTS.md  playwright.config.ts
7_FullStack/scripts/: start-dev.ps1  start-dev.sh  stop-dev.ps1  stop-dev.sh
8_DotNet_Kanban/: .dockerignore  .gitignore  8_DotNet_Kanban.sln  CLAUDE.md  DOCKER_GUIDE.md  Developer.md  Dockerfile  NEXT.md  PLAN.md  docker-compose.yml
8_DotNet_Kanban/.claude/: ralph-loop.local.md  settings.local.json
8_DotNet_Kanban/backend/: KanbanApi.csproj  KanbanApi.http  KanbanApi.slnx  Program.cs  appsettings.Development.json  appsettings.json
8_DotNet_Kanban/frontend/: angular.json  package-lock.json  package.json
8_DotNet_Kanban/scripts/: start-dev.ps1  stop-dev.ps1
kanban/: .gitignore  README.md
kanban/frontend/: package-lock.json  package.json  playwright.config.ts
(+80 files in other folders)
